# pancreas-vision-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  pixi.toml  pyproject.toml  todo.md
artifacts/bag_protocol_v1/: bag_manifest.csv  instance_manifest.csv  review_candidates.csv  summary.json  summary.md
artifacts/error_analysis_v1/: README.md  error_by_source_bucket.csv  gan_review_shortlist.json  hard_case_analysis.json
artifacts/exp_clam_hard_case_v1/: README.md  attention_summary.json  bag_metrics.json  bag_predictions.csv  training_history.json
artifacts/exp_clam_v1/: README.md  attention_summary.json  bag_metrics.json  bag_predictions.csv  training_history.json
artifacts/feature_cache_v1/: README.md  feature_index.csv  summary.json
artifacts/gan_augmented_v1/: augmented_instance_manifest.csv  pipeline_summary.json  synthetic_instances.json
artifacts/split_protocol_v1/: evaluation_template.json  grouped_5fold.csv  hard_case_split.csv  hard_case_split.json  main_split.csv  summary.json  summary.md
data/: 1.csv
data/KC/: 1.tif  5.tif
docs/: Answer_Batch_2.md  Idea_Discovery_2026-03-26.md  ProjectDemand.md  Question_Batch_1.txt  Question_Batch_2.txt  refs.md
roisrp/: 2.csv  3.csv  AGENTS.md  CLAUDE.md  requirements.txt  result.md  verify_onnx_cuda.py
src/: build_bag_protocol.py  build_split_protocol.py  experiment_runner.py  extract_features.py  run_error_analysis.py  run_gan_augmentation.py  train_baseline.py  train_clam.py  train_improved.py  train_stylegan3.py
tests/: conftest.py  test_engine.py  test_io.py  test_models.py  test_types.py
(+118 files in other folders)
